# Wingify-crewai-correct-code

./: README.md  pyproject.toml
src/wingify_correct_code/: crew.py  main.py  requirements.txt  server.py  tasks.py  test12.py
src/wingify_correct_code/config/: agents.yaml  tasks.yaml
src/wingify_correct_code/tools/: custom_tool.py
